<resources>
    <string name="app_name">UNT Helper</string>
    <string name="statistics">Statistics</string>
    <string name="courses">Courses</string>
    <string name="profile">Profile</string>
    <string name="login" translatable="false">LOGIN</string>
    <string name="sign_up" translatable="false">SIGN UP</string>
    <string name="have_an_account">Have an account?</string>
    <string name="or_connect_with" translatable="false">OR CONNECT WITH</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="choose_a_course">Choose a course</string>
    <string name="fname_lname">FName LName</string>
    <string name="change_image">Change Image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_developers">About Developers</string>
    <string name="accept">Accept</string>
    <string name="team_name_snickersdevops" translatable="false">Team Name : SnickersDevOps</string>
    <string name="team_members" translatable="false">Team members :</string>
    <string name="team_members_list" translatable="false">Adilet Kaskarauov, Temirlan Akishev, Maksat Maratov, Timur Doirashev</string>
    <string name="link_to_the_project_code" translatable="false">Link to the project code :</string>
    <string name="exam_tickets">Exam tickets</string>
    <string name="about_course">About Course</string>
    <string name="random_exam_ticket">Random exam ticket</string>
    <string name="all_available_tickets">All available tickets</string>
    <string name="back">Back</string>
</resources>