<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fg.CoursePressedFragment">


    <ImageView
        android:id="@+id/img_course"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="96dp"
        android:src="@drawable/course_demo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="Course Name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_course" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_about_course"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/btn_color_3"
        android:drawableRight="@drawable/ic_right"
        android:text="@string/about_course"
        android:textAlignment="textStart"
        android:textSize="23sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_course_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_exam_tickets"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/btn_color_3"
        android:drawableRight="@drawable/ic_right"
        android:text="@string/exam_tickets"
        android:textAlignment="textStart"
        android:textSize="23sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_about_course" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_random_tickets"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/btn_color_3"
        android:drawableRight="@drawable/ic_right"
        android:text="@string/random_exam_ticket"
        android:textAlignment="textStart"
        android:textSize="23sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_exam_tickets" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@drawable/shadow_navbar"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:itemIconTint="@drawable/btn_nav_colors"
        app:itemTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>